--- a/Facebook/Views/Shared/_Layout.cshtml
+++ b/Facebook/Views/Shared/_Layout.cshtml
@@ -12,8 +12,8 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">
-                    <img src=@Url.Content("~/Content/Images/logo.png")">
+                <a class="navbar-brand logo-header"  href="#">
+                    <img src=@Url.Content("~/Content/Images/logo.png")>
                 </a>
             </div>
             <div class="col-sm-3 col-md-7">
