fixed albums index

--- a/Facebook/Views/Album/Index.cshtml
+++ b/Facebook/Views/Album/Index.cshtml
@@ -4,8 +4,8 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-<p>TEST</p>
+<h2>Your albums</h2>
+
 <p>
     @Html.ActionLink("Create New", "New", "Album",new { @id = ViewBag.userId },null)
 </p>
