changed profile page and added photo functionality

--- a/Facebook/Views/Album/Index.cshtml
+++ b/Facebook/Views/Album/Index.cshtml
@@ -21,7 +21,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.name)
+           @Html.ActionLink(item.name, "Index", "Photo", new { @id = item.albumID }, null)
         </td>
     
         <td>
