--- a/Facebook/Views/Profile/Show.cshtml
+++ b/Facebook/Views/Profile/Show.cshtml
@@ -24,7 +24,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<img src='@Model.profileImageUrl' class="img-responsive img-circle tm-border" alt="templatemo easy profile">
+				<img src='@Model.profileImageUrl' class="profile-img img-responsive img-circle tm-border" alt="templatemo easy profile">
 				<hr>
 				<h1 class="tm-title bold shadow">@Model.name</h1>
 				<h1 class="white bold shadow">Creative Director</h1>
