can now click on photos

--- a/Facebook/Views/Photo/Index.cshtml
+++ b/Facebook/Views/Photo/Index.cshtml
@@ -19,7 +19,7 @@
 			@foreach (var item in Model)
 			{
 				<div class="col-lg-3 col-md-4 col-6">
-					<a href="#" class="d-block mb-4 h-100">
+					<a href="@Url.Action("Show", "Photo", new { @id = item.photoID})" class="d-block mb-4 h-100">
 						<img class="img-fluid img-thumbnail" src="@item.photoURL" alt="">
 					</a>
 				</div>
