--- a/Facebook/Views/Profile/Edit.cshtml
+++ b/Facebook/Views/Profile/Edit.cshtml
@@ -1,7 +1,46 @@
-﻿
+﻿@model Facebook.Models.Profile
+
 @{
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+@using (Html.BeginForm(actionName: "Edit", controllerName: "Profile"))
+{
+    @Html.HttpMethodOverride(HttpVerbs.Put)
 
+    @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+
+    @Html.HiddenFor(m => m.userId)
+    @Html.HiddenFor(m => m.profileID)
+    @Html.HiddenFor(m => m.active)
+    @Html.HiddenFor(m => m.privateP)
+
+    <div class="form-group">
+        @Html.Label("profileImageUrl", "Choose a profile picture")
+        @Html.TextBox("profileImageUrl", null, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.profileImageUrl, "", new { @class = "text-danger" })
+    </div>
+    <div class="form-group">
+        @Html.Label("name", "What's your name?")
+        @Html.TextBox("name", null, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.name, "", new { @class = "text-danger" })
+    </div>
+    <div class="form-group">
+        @Html.Label("about", "Tell us something about you")
+        @Html.TextArea("about", null, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.about, "", new { @class = "text-danger" })
+    </div>
+    <div class="form-group">
+        @Html.Label("birthday", "What's your birthday")
+        @Html.TextArea("birthday", null, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.birthday, "", new { @class = "text-danger" })
+    </div>
+    <div class="form-group">
+        @Html.Label("hobbies", "Tell us some of your hobbies")
+        @Html.TextArea("hobbies", null, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.hobbies, "", new { @class = "text-danger" })
+    </div>
+
+    <button type="submit" class="btn btn-primary">Submit</button>
+
+}
