--- a/Facebook/Views/Shared/_Layout.cshtml
+++ b/Facebook/Views/Shared/_Layout.cshtml
@@ -21,14 +21,15 @@
 				</a>
 			</div>
 			<div class="col-sm-3 col-md-7">
-				<form class="navbar-form" role="search">
-					<div class="input-group">
-						<input type="text" class="form-control" placeholder="Looking for someone?" name="q">
-						<div class="input-group-btn">
-							<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+					@using (Html.BeginForm("Search", "Search", FormMethod.Get,new {@class= "navbar-form" }))
+					{
+						<div class="input-group">
+							@Html.TextBox("searchText", "Looking for someone?", new { @class = "form-control" })
+							<div class="input-group-btn">
+								<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+							</div>
 						</div>
-					</div>
-				</form>
+					}
 			</div>
 			<div class="navbar-collapse collapse">
 				@Html.Partial("_LoginPartial")
