--- a/Facebook/Views/Profile/Show.cshtml
+++ b/Facebook/Views/Profile/Show.cshtml
@@ -8,15 +8,13 @@
 </style>
 
 @{
-    ViewBag.Title = "Show Profile";
+    ViewBag.Title = Model.name +"'s profile";
 }
 <!--
 @Html.ActionLink("Albums", "Index", "Album", new { @id = Model.user.Id }, null)
 @Html.ActionLink("Message center", "Index", "Album", new { @id = Model.user.Id }, null)
 @Html.ActionLink("Edit your profile", "Edit", "Profile", new { @id = Model.profileID }, null)
 -->
-
-
 
 <div class="backdrop">
 
