--- a/Facebook/Views/Album/Index.cshtml
+++ b/Facebook/Views/Album/Index.cshtml
@@ -32,26 +32,25 @@ else
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.ActionLink(item.name, "Index", "Photo", new { @id = item.albumID }, null)
-            </td>
+    <tr>
+        <td>
+            @Html.ActionLink(item.name, "Index", "Photo", new { @id = item.albumID }, null)
+        </td>
 
-            
-            @if (ViewBag.userId == ViewBag.currentUserId)
+
+        @if (ViewBag.userId == ViewBag.currentUserId)
+        {
+        <td>
+           
+            @using (Html.BeginForm("Delete", "Album", new { @id = item.albumID }, FormMethod.Post, null))
             {
-                <td>
-                    @using (Html.BeginForm(actionName: "Edit", controllerName: "Album", method: FormMethod.Post, routeValues: new { id = item.albumID }))
-                    {
-                        @Html.ActionLink("Edit", "Edit")
-                    }
-                    @using (Html.BeginForm(actionName: "Delete", controllerName: "Album", method: FormMethod.Post, routeValues: new { id = item.albumID }))
-                    {
-                        @Html.ActionLink("Delete", "Delete")
-                    }
-                </td>
+                @Html.HttpMethodOverride(HttpVerbs.Delete);
+                <button class="btn btn-success" type="submit">Delete</button>
             }
-        </tr>
+        </td>
+    
+        }
+    </tr>
     }
 
 </table>
