--- a/Facebook/Views/Profile/Edit.cshtml
+++ b/Facebook/Views/Profile/Edit.cshtml
@@ -21,6 +21,11 @@
         @Html.ValidationMessageFor(m => m.profileImageUrl, "", new { @class = "text-danger" })
     </div>
     <div class="form-group">
+        @Html.Label("backgroundImageUrl", "Choose a background photo")
+        @Html.TextBox("backgroundImageUrl", null, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.backgroundImageUrl, "", new { @class = "text-danger" })
+    </div>
+    <div class="form-group">
         @Html.Label("name", "What's your name?")
         @Html.TextBox("name", null, new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.name, "", new { @class = "text-danger" })
@@ -31,16 +36,45 @@
         @Html.ValidationMessageFor(m => m.about, "", new { @class = "text-danger" })
     </div>
     <div class="form-group">
-        @Html.Label("birthday", "What's your birthday")
-        @Html.TextArea("birthday", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.birthday, "", new { @class = "text-danger" })
+        @Html.Label("occupation", "What is your occupation?")
+        @Html.TextArea("occupation", null, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.occupation, "", new { @class = "text-danger" })
     </div>
     <div class="form-group">
-        @Html.Label("hobbies", "Tell us some of your hobbies")
-        @Html.TextArea("hobbies", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.hobbies, "", new { @class = "text-danger" })
+        @Html.Label("studies", "What are your studies?")
+        @Html.TextArea("studies", null, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.studies, "", new { @class = "text-danger" })
     </div>
-
+    <div class="form-group">
+        @Html.Label("languages", "What langueges do you know?")
+        @Html.TextArea("languages", null, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.languages, "", new { @class = "text-danger" })
+    </div>
+    <div class="form-group">
+        @Html.Label("job", "What is your work experience?")
+        @Html.TextArea("job", null, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.job, "", new { @class = "text-danger" })
+    </div>
+    <div class="form-group">
+        @Html.Label("address", "What is your address?")
+        @Html.TextArea("address", null, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.address, "", new { @class = "text-danger" })
+    </div>
+    <div class="form-group">
+        @Html.Label("phone", "What is your phone number?")
+        @Html.TextArea("phone", null, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.phone, "", new { @class = "text-danger" })
+    </div>
+    <div class="form-group">
+        @Html.Label("email", "What is your email address?")
+        @Html.TextArea("email", null, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.email, "", new { @class = "text-danger" })
+    </div>
+    <div class="form-group">
+        @Html.Label("web", "What is your website?")
+        @Html.TextArea("web", null, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.web, "", new { @class = "text-danger" })
+    </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 
 }
