--- a/Facebook/Views/Profile/Edit.cshtml
+++ b/Facebook/Views/Profile/Edit.cshtml
@@ -1,80 +1,85 @@
 ﻿@model Facebook.Models.Profile
 
 @{
-    ViewBag.Title = "Edit";
+	ViewBag.Title = "Edit";
 }
 
 @using (Html.BeginForm(actionName: "Edit", controllerName: "Profile"))
 {
-    @Html.HttpMethodOverride(HttpVerbs.Put)
+	@Html.HttpMethodOverride(HttpVerbs.Put)
 
-    @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+	@Html.ValidationSummary(false, "", new { @class = "text-danger" })
 
-    @Html.HiddenFor(m => m.userId)
-    @Html.HiddenFor(m => m.profileID)
-    @Html.HiddenFor(m => m.active)
-    @Html.HiddenFor(m => m.privateP)
+	@Html.HiddenFor(m => m.userId)
+	@Html.HiddenFor(m => m.profileID)
+	@Html.HiddenFor(m => m.active)
+	@Html.HiddenFor(m => m.privateP)
 
-    <div class="form-group">
-        @Html.Label("profileImageUrl", "Choose a profile picture")
-        @Html.TextBox("profileImageUrl", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.profileImageUrl, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("backgroundImageUrl", "Choose a background photo")
-        @Html.TextBox("backgroundImageUrl", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.backgroundImageUrl, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("name", "What's your name?")
-        @Html.TextBox("name", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.name, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("about", "Tell us something about you")
-        @Html.TextArea("about", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.about, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("occupation", "What is your occupation?")
-        @Html.TextArea("occupation", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.occupation, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("studies", "What are your studies?")
-        @Html.TextArea("studies", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.studies, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("languages", "What langueges do you know?")
-        @Html.TextArea("languages", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.languages, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("job", "What is your work experience?")
-        @Html.TextArea("job", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.job, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("address", "What is your address?")
-        @Html.TextArea("address", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.address, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("phone", "What is your phone number?")
-        @Html.TextArea("phone", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.phone, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("email", "What is your email address?")
-        @Html.TextArea("email", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.email, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.Label("web", "What is your website?")
-        @Html.TextArea("web", null, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.web, "", new { @class = "text-danger" })
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+	<div class="form-group">
+		@Html.Label("profileImageUrl", "Choose a profile picture")
+		@Html.TextBox("profileImageUrl", null, new { @class = "form-control" })
+		@Html.ValidationMessageFor(m => m.profileImageUrl, "", new { @class = "text-danger" })
+	</div>
+	<div class="form-group">
+		@Html.Label("backgroundImageUrl", "Choose a background photo")
+		@Html.TextBox("backgroundImageUrl", null, new { @class = "form-control" })
+		@Html.ValidationMessageFor(m => m.backgroundImageUrl, "", new { @class = "text-danger" })
+	</div>
+	<div class="form-group">
+		@Html.Label("name", "What's your name?")
+		@Html.TextBox("name", null, new { @class = "form-control" })
+		@Html.ValidationMessageFor(m => m.name, "", new { @class = "text-danger" })
+	</div>
+	<div class="form-group">
+		@Html.Label("about", "Tell us something about you")
+		@Html.TextArea("about", null, new { @class = "form-control" })
+		@Html.ValidationMessageFor(m => m.about, "", new { @class = "text-danger" })
+	</div>
+	<div class="form-group">
+		@Html.Label("occupation", "What is your occupation?")
+		@Html.TextArea("occupation", null, new { @class = "form-control" })
+		@Html.ValidationMessageFor(m => m.occupation, "", new { @class = "text-danger" })
+	</div>
+	<div class="form-group">
+		@Html.Label("studies", "What are your studies?")
+		@Html.TextArea("studies", null, new { @class = "form-control" })
+		@Html.ValidationMessageFor(m => m.studies, "", new { @class = "text-danger" })
+	</div>
+	<div class="form-group">
+		@Html.Label("languages", "What langueges do you know?")
+		@Html.TextArea("languages", null, new { @class = "form-control" })
+		@Html.ValidationMessageFor(m => m.languages, "", new { @class = "text-danger" })
+	</div>
+	<div class="form-group">
+		@Html.Label("job", "What is your work experience?")
+		@Html.TextArea("job", null, new { @class = "form-control" })
+		@Html.ValidationMessageFor(m => m.job, "", new { @class = "text-danger" })
+	</div>
+	<div class="form-group">
+		@Html.Label("address", "What is your address?")
+		@Html.TextArea("address", null, new { @class = "form-control" })
+		@Html.ValidationMessageFor(m => m.address, "", new { @class = "text-danger" })
+	</div>
+	<div class="form-group">
+		@Html.Label("phone", "What is your phone number?")
+		@Html.TextArea("phone", null, new { @class = "form-control" })
+		@Html.ValidationMessageFor(m => m.phone, "", new { @class = "text-danger" })
+	</div>
+	<div class="form-group">
+		@Html.Label("email", "What is your email address?")
+		@Html.TextArea("email", null, new { @class = "form-control" })
+		@Html.ValidationMessageFor(m => m.email, "", new { @class = "text-danger" })
+	</div>
+	<div class="form-group">
+		@Html.Label("web", "What is your website?")
+		@Html.TextArea("web", null, new { @class = "form-control" })
+		@Html.ValidationMessageFor(m => m.web, "", new { @class = "text-danger" })
+	</div>
+	<div class="form-group">
+		@Html.Label("privateP", "Do you want your profile to be private?")
+		@Html.CheckBox("privateP",Model.privateP);
+		@Html.ValidationMessageFor(m => m.privateP, "", new { @class = "text-danger" })
+	</div>
+	<button type="submit" class="btn btn-primary">Submit</button>
 
 }
