--- a/Facebook/Views/Profile/Show.cshtml
+++ b/Facebook/Views/Profile/Show.cshtml
@@ -79,10 +79,19 @@
 					</div>
 				</div>
 				<div class="col-md-8 col-sm-12">
-					<div class="skills">
-						<h2>About me</h2>
-						<p> @Model.about</p>
-					</div>
+                    <div class="skills">
+                        <h2>About me</h2>
+                        <h5>Description</h5>
+                        <p> @Model.about</p>
+                        <h5>Hobbies</h5>
+                        <p>Trekking</p>
+                        <h5>Birthdate</h5>
+                        <p>3.12.1998</p>
+                        <h5>Prefered music genre</h5>
+                        <p>Jazz</p>
+                        <h5>Favourite type of movies</h5>
+                        <p>Drama</p>
+                    </div>
 				</div>
 			</div>
 		</section>
