--- a/Facebook/Views/Shared/_Layout.cshtml
+++ b/Facebook/Views/Shared/_Layout.cshtml
@@ -20,11 +20,11 @@
 					<img src=@Url.Content("~/Content/Images/logo.png")>
 				</a>
 			</div>
-			<div class="col-sm-3 col-md-7">
+			<div class="col-sm-7 col-md-8">
 					@using (Html.BeginForm("Search", "Search", FormMethod.Get,new {@class= "navbar-form" }))
 					{
 						<div class="input-group">
-							@Html.TextBox("searchText", "Looking for someone?", new { @class = "form-control" })
+							@Html.TextBox("searchText", "Searching for someone?", new { @class = "form-control" })
 							<div class="input-group-btn">
 								<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
 							</div>
