--- a/Facebook/Views/Shared/_Layout.cshtml
+++ b/Facebook/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 		<div class="container">
 			<div class="navbar-header">
 				<a class="navbar-brand logo-header" href="#">
-					<img src=@Url.Content("~/Content/Images/logo.png")>
+					<!--<img src=@Url.Content("~/Content/Images/logo.png")> -->
 				</a>
 			</div>
 			<div class="col-sm-7 col-md-8">
