--- a/Facebook/Views/Album/Index.cshtml
+++ b/Facebook/Views/Album/Index.cshtml
@@ -4,54 +4,76 @@
 	ViewBag.Title = "Index";
 }
 
+<style>
+	.bttns-cont{
+		display: flex;
+		flex-direction: row;
+		justify-content:center;
+		align-items: center;
+	}
+	
+	body {
+		background-color: #377DE7;
+	}
+	.btn-margin{
+		margin-left: 10px;
+	}
+	
+</style>
+
 @if (ViewBag.userId == ViewBag.currentUserId)
 {
-    <h2>Your albums</h2>
+    <h2 class="text-center">Your albums</h2>
 }
 else
 {
-    <h2>@ViewBag.userName's albums</h2>
+    <h2 class="text-center">@ViewBag.userName's albums</h2>
 }
 
 
 @if (ViewBag.userId == ViewBag.currentUserId)
 {
-    <p>
-        @Html.ActionLink("Create New", "New", "Album", new { @id = ViewBag.userId }, null)
+    <p class="text-center">
+        @Html.ActionLink("Create New", "New", "Album", new { @id = ViewBag.userId }, new {@class="btn btn-dark"})
     </p>
 }
+<div class="row">
+		<div class="col-md-1">&nbsp;</div>
+		<div class="col-md-12">
+			<div class="row space-16">&nbsp;</div>
+			<div class="row">
+				@foreach (var item in Model)
+				{
+					<div class="col-sm-4">
+						<div class="thumbnail">
 
+							<div class="caption card-footer text-center">
+								
+									<a href="@Url.Action("Index", "Photo", new { @id = item.albumID })" class="d-block mb-4 h-100">
+										<h2> @item.name </h2>
+									</a>
+									<p class="text-muted">
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.name)
-        </th>
-        <th></th>
-    </tr>
+									</p>
 
-    @foreach (var item in Model)
-    {
-    <tr>
-        <td>
-            @Html.ActionLink(item.name, "Index", "Photo", new { @id = item.albumID }, null)
-        </td>
-
-        @if (ViewBag.userId == ViewBag.currentUserId||ViewBag.administrator)
-        {
-		<td>
-			@Html.ActionLink("Edit", "Edit", "Album", new { @id = item.albumID },new {@class="btn btn-success"})
-		</td>
-        <td>
-           
-            @using (Html.BeginForm("Delete", "Album", new {id = item.albumID}, FormMethod.Post, null))
-			{
-                @Html.HttpMethodOverride(HttpVerbs.Delete);
-                <button class="btn btn-success" type="submit">Delete</button>
-            }
-        </td>
-        }
-    </tr>
-    }
-
-</table>
+									<div class="bttns-cont" >
+										@if (ViewBag.userId == ViewBag.currentUserId || ViewBag.administrator)
+										{
+											@Html.ActionLink("Edit", "Edit", "Album", new { @id = item.albumID }, new { @class = "btn btn-dark btn-margin" })
+											using (Html.BeginForm("Delete", "Album", new { id = item.albumID }, FormMethod.Post, new { @display = "inline" }))
+											{
+												@Html.HttpMethodOverride(HttpVerbs.Delete);
+												<button class="btn btn-danger btn-margin" type="submit">Delete</button>
+											}
+										}
+									</div>
+								
+							</div>
+						</div>
+						
+					</div>
+				}
+				</div>
+			<div class="col-md-1">&nbsp;</div>
+		</div>
+</div>
