--- a/Facebook/Views/Search/Search.cshtml
+++ b/Facebook/Views/Search/Search.cshtml
@@ -55,6 +55,6 @@
 
 @if(Model.Count()==0)
 {
-	<h2>No results</h2>
-	<h3>Your search dosn't match any profile</h3>
+	<h2 color="white">No results</h2>
+	<h3 color="white">Your search dosn't match any profile</h3>
 }
